==> hhk7734/stm32_hal_mpu9250/mpu9250.cpp <==
#include "mpu9250.h"
#include <math.h>

HAL_StatusTypeDef Mpu9250::get_acc(int16_t *xyz) {
    HAL_StatusTypeDef status;
    status = read_3_axis(MPU9250_ACCEL_XOUT_H, xyz);
    xyz[0] -= acc_offset[0];
    xyz[1] -= acc_offset[1];
    xyz[2] -= acc_offset[2];
    return status;
}

HAL_StatusTypeDef Mpu9250::get_gyro(int16_t *xyz) {
    HAL_StatusTypeDef status;
    status = read_3_axis(MPU9250_GYRO_XOUT_H, xyz);
    xyz[0] -= gyro_offset[0];
    xyz[1] -= gyro_offset[1];
    xyz[2] -= gyro_offset[2];
    return status;
}

HAL_StatusTypeDef Mpu9250::get_mag(int16_t *xyz) {
    HAL_StatusTypeDef status;
    int16_t           mag_xyz[3];
    status = read_3_axis(MPU9250_EXT_SENS_DATA_00, mag_xyz);

    /**
     * Orientation
     * mag_x acc_y
     * mag_y acc_x
     * mag_z -acc_z
     */
    xyz[0] = mag_sensitivity[1] * (mag_xyz[1] - mag_offset[1]);
    xyz[1] = mag_sensitivity[0] * (mag_xyz[0] - mag_offset[0]);
    xyz[2] = -mag_sensitivity[2] * (mag_xyz[2] - mag_offset[2]);

    return status;
}

HAL_StatusTypeDef Mpu9250::write_reg(uint8_t reg, uint8_t value) {
    uint8_t buff[2] = {static_cast<uint8_t>(SPI_WRITE_REG | reg), value};
    return transceive(buff, buff, 2);
}

HAL_StatusTypeDef Mpu9250::read_3_axis(uint8_t reg, int16_t *xyz) {
    HAL_StatusTypeDef status;
    uint8_t           temp[7];
    temp[0] = SPI_READ_REG | reg;
    status  = transceive(temp, temp, 7);
    xyz[0]  = (temp[1] << 8) | temp[2];
    xyz[1]  = (temp[3] << 8) | temp[4];
    xyz[2]  = (temp[5] << 8) | temp[6];
    return status;
}
