==> hhk7734/STM32_AHRS/lib/MPU9250_i2c/MPU9250.cpp <==
#include "MPU9250.h"
#include <Wire.h>
#include <math.h>
#define AK8963_ADDRESS   0x0C
#define AK8963_WHO_AM_I  0x00
#define AK8963_INFO      0x01
#define AK8963_ST1       0x02
#define AK8963_XOUT_L    0x03
#define AK8963_XOUT_H    0x04
#define AK8963_YOUT_L    0x05
#define AK8963_YOUT_H    0x06
#define AK8963_ZOUT_L    0x07
#define AK8963_ZOUT_H    0x08
#define AK8963_ST2       0x09
#define AK8963_CNTL1     0x0A
#define AK8963_CNTL2     0x0B
#define AK8963_ASTC      0x0C
#define AK8963_I2CDIS    0x0F
#define AK8963_ASAX      0x10
#define AK8963_ASAY      0x11
#define AK8963_ASAZ      0x12
#define MPU9250_AD0 0
    #define MPU9250_ADDRESS 0x69
    #define MPU9250_ADDRESS 0x68
#define MPU9250_SELF_TEST_X_GYRO  0x00
#define MPU9250_SELF_TEST_Y_GYRO  0x01
#define MPU9250_SELF_TEST_Z_GYRO  0x02
#define MPU9250_SELF_TEST_X_ACCEL 0x0D
#define MPU9250_SELF_TEST_Y_ACCEL 0x0E
#define MPU9250_SELF_TEST_Z_ACCEL 0x0F
#define MPU9250_XG_OFFSET_H      0x13
#define MPU9250_XG_OFFSET_L      0x14
#define MPU9250_YG_OFFSET_H      0x15
#define MPU9250_YG_OFFSET_L      0x16
#define MPU9250_ZG_OFFSET_H      0x17
#define MPU9250_ZG_OFFSET_L      0x18
#define MPU9250_SMPLRT_DIV       0x19
#define MPU9250_CONFIG           0x1A
#define MPU9250_GYRO_CONFIG      0x1B
#define MPU9250_ACCEL_CONFIG     0x1C
#define MPU9250_ACCEL_CONFIG2    0x1D
#define MPU9250_LP_ACCEL_ODR     0x1E
#define MPU9250_WOM_THR          0x1F
#define MPU9250_FIFO_EN          0x23
#define MPU9250_I2C_MST_CTRL     0x24

void MPU9250_::get_acc(int16_t *xyz)
{
    read_raw_acc(xyz);
    for (uint8_t i = 0; i < 3; ++i)
    {
        xyz[i] -= acc_offset[i];
    }
}

void MPU9250_::get_gyro(int16_t *xyz)
{
    read_raw_gyro(xyz);
    for (uint8_t i = 0; i < 3; ++i)
    {
        xyz[i] -= gyro_offset[i];
    }
}

void MPU9250_::get_mag(int16_t *xyz)
{
    read_raw_mag(xyz);
    for (uint8_t i = 0; i < 3; ++i)
    {
        xyz[i] = ((int32_t)(xyz[i] - mag_offset[i])*mag_sensitivity[i])>>5;
    }
}

uint8_t MPU9250_::write_reg(uint8_t reg, uint8_t data)
{
    Wire.beginTransmission(MPU9250_ADDRESS);
    Wire.write(reg);
    Wire.write(data);
    return Wire.endTransmission(); // i2c communication state
}

uint8_t MPU9250_::read_3axis(uint8_t reg, int16_t *xyz)
{
    Wire.beginTransmission(MPU9250_ADDRESS);
    Wire.write(reg);
    Wire.endTransmission(false); // repeated start
    uint8_t rx_buff_length = Wire.requestFrom(MPU9250_ADDRESS,6);
    xyz[0] = (Wire.read() << 8) | Wire.read();
    xyz[1] = (Wire.read() << 8) | Wire.read();
    xyz[2] = (Wire.read() << 8) | Wire.read();
    return rx_buff_length;
}
